## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)."\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\" \
	$(ICONFIG_CFLAGS)

AM_CFLAGS =\
	 -Wall\
	 -g


conf_datadir = $(prefix)/iconfig/config
conf_data_DATA = \
	app.yml \
	defconfig.sql \
	hard-reset.sed \
	soft-reset.sed \
	defconfig.DCTX-001.sql \
	defconfig.DCTX-002.sql \
	defconfig.DTTX-001.sql \
	defconfig.DTTX-002.sql